2008-09-30	Jennifer Averett <jennifer.averett@oarcorp.com>

	* include/irq-config.h: New file.
	* startup/spurious.c: Removed.

2008-09-30	Jennifer Averett <jennifer.averett@oarcorp.com>

	* Makefile.am, preinstall.am, PCI_bus/universe.c, console/console.c,
	include/bsp.h, irq/FPGA.c, irq/irq.c, startup/Hwr_init.c,
	startup/bspstart.c, startup/vmeintr.c: Modifications required to run
	on hardware. Some cleanup.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move noinst_LIBRARIES = libbsp.a before its
	components.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove noinst_PROGRAMS (Unused).

2008-09-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Cleanup ../../shared/include/bootcard.h handling.

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Make letting boot_card() handle work area allocation
	mandatory. Rename RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION to
	BSP_BOOTCARD_OPTIONS.

2008-09-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h, startup/bspstart.c: Remove unused BSP_INIT_STACK_SIZE
	now that the linkcmds accounts for the starting stack.

2008-09-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, include/bsp.h, startup/bspstart.c, startup/linkcmds: Use
	PowerPC level shared bsp_get_work_area() implementation.
	* startup/bspgetworkarea.c: Removed.

2008-09-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/bspstart.c: Remove unused variable.

2008-09-18	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/bsp.h: Remove unnecessary boilerplate comments.

2008-09-18	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Add include of rtems/libio.h.
