@@ -18,7 +18,7 @@ nodist_include_bsp_HEADERS = ../../shared/include/bootcard.h
 DISTCLEANFILES = include/bspopts.h
 
 include_HEADERS += ../../shared/tod.h
-include_HEADERS += include/coverhd.h include/gen2.h
+include_HEADERS += ../../shared/include/coverhd.h include/gen2.h
 
 ###
 dist_project_lib_DATA += startup/linkcmds
