@@ -10,8 +10,9 @@
  *  the file LICENSE in this distribution or at
  *  http://www.rtems.com/license/LICENSE.
  *
- *  $Id:
+ *  $Id$
  */
+
 #ifndef __PCI_h
 #define __PCI_h
 
